@@ -30,7 +30,6 @@ import java.util.Date;
 import java.util.Random;
 import java.util.UUID;
 
-import android.util.Log;
 
 import com.keepassdroid.Database;
 import com.keepassdroid.utils.Types;
@@ -59,8 +58,10 @@ import com.keepassdroid.utils.Types;
 public class PwEntryV3 extends PwEntry {
 
 	public static final Date NEVER_EXPIRE = getNeverExpire();
+	public static final Date NEVER_EXPIRE_BUG = getNeverExpireBug();
 	public static final Date DEFAULT_DATE = getDefaultDate();
 	public static final PwDate PW_NEVER_EXPIRE = new PwDate(NEVER_EXPIRE);
+	public static final PwDate PW_NEVER_EXPIRE_BUG = new PwDate(NEVER_EXPIRE_BUG);
 	public static final PwDate DEFAULT_PWDATE = new PwDate(DEFAULT_DATE);
 	
 
@@ -114,32 +115,29 @@ public class PwEntryV3 extends PwEntry {
 
 		return cal.getTime();
 	}
-
-	public static boolean IsNever(Date date) {
-		Calendar never = Calendar.getInstance();
-		never.setTime(NEVER_EXPIRE);
-		never.set(Calendar.MILLISECOND, 0);
-
+	
+	/** This date was was accidentally being written
+	 *  out when an entry was supposed to be marked as
+	 *  expired. We'll use this to silently correct those
+	 *  entries.
+	 * @return
+	 */
+	private static Date getNeverExpireBug() {
 		Calendar cal = Calendar.getInstance();
-		cal.setTime(date);
-		cal.set(Calendar.MILLISECOND, 0);
+		cal.set(Calendar.YEAR, 2999);
+		cal.set(Calendar.MONTH, 11);
+		cal.set(Calendar.DAY_OF_MONTH, 30);
+		cal.set(Calendar.HOUR, 23);
+		cal.set(Calendar.MINUTE, 59);
+		cal.set(Calendar.SECOND, 59);
 
-		Log.d("never", "L="+ never.get(Calendar.YEAR) + " R=" + cal.get(Calendar.YEAR));
-		Log.d("never", "L="+ never.get(Calendar.MONTH) + " R=" + cal.get(Calendar.MONTH));
-		Log.d("never", "L="+ never.get(Calendar.DAY_OF_MONTH) + " R=" + cal.get(Calendar.DAY_OF_MONTH));
-		Log.d("never", "L="+ never.get(Calendar.HOUR) + " R=" + cal.get(Calendar.HOUR));
-		Log.d("never", "L="+ never.get(Calendar.MINUTE) + " R=" + cal.get(Calendar.MINUTE));
-		Log.d("never", "L="+ never.get(Calendar.SECOND) + " R=" + cal.get(Calendar.SECOND));
-
-		return (never.get(Calendar.YEAR) == cal.get(Calendar.YEAR)) && 
-		(never.get(Calendar.MONTH) == cal.get(Calendar.MONTH)) &&
-		(never.get(Calendar.DAY_OF_MONTH) == cal.get(Calendar.DAY_OF_MONTH)) &&
-		(never.get(Calendar.HOUR) == cal.get(Calendar.HOUR)) &&
-		(never.get(Calendar.MINUTE) == cal.get(Calendar.MINUTE)) &&
-		(never.get(Calendar.SECOND) == cal.get(Calendar.SECOND));
-
+		return cal.getTime();
 	}
 
+	public static boolean IsNever(Date date) {
+		return PwDate.IsSameDate(NEVER_EXPIRE, date);
+	}
+	
 	// for tree traversing
 	public PwGroupV3 parent = null;
 
